some points bugs and display on smaller screens

--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,7 @@ header {
 
 #statsContainer {
 	display: none;
+	flex-direction: column;
 }
 
 #upgradeText {
@@ -77,7 +78,8 @@ h1 {
 #winLoss {
 	position: absolute;
 	top: 200px;
-	left: 5vw;
+	left: 4vw;
+	width: 250px;
 }
 
 span {
@@ -86,6 +88,7 @@ span {
 
 #pointsDisplay {
 	width: fit-content;
+	margin-top: 0;
 }
 
 .tile {
@@ -107,7 +110,7 @@ span {
 	border-radius: 30px;
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1700px) {
 
 	#githubicon,
 	#homeIcon {
@@ -115,8 +118,24 @@ span {
 	}
 
 	#winLoss {
-		display: none;
+		display: flex;
+		position: relative;
+		top: auto;
+		left: auto;
+		font-size: medium;
+		margin-bottom: 10px;
+		width: auto;
 	}
+
+	#winLoss h2 {
+		padding-left: 15px;
+		margin: 0;
+	}
+
+	#statsContainer {
+		flex-direction: row;
+	}
+
 }
 
 #githubicon:hover {
